--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.prose :where(a):not(:where([class~="not-prose"] *)) {
-  text-decoration: none;
+iframe {
+  z-index: -1;
 }
 
 @layer base {
@@ -15,7 +15,11 @@
 }
 
 @layer utilities {
-  .link {
-    @apply underline underline-offset-1 hover:text-themePink hover:no-underline dark:hover:no-underline dark:hover:text-darkPink cursor-pointer;
+  .link-underline {
+    @apply underline underline-offset-2 hover:text-themePink hover:no-underline dark:hover:no-underline dark:hover:text-darkPink cursor-pointer;
+  }
+
+  .link-no-underline {
+    @apply no-underline underline-offset-1 hover:text-themePink hover:no-underline dark:hover:no-underline dark:hover:text-darkPink cursor-pointer;
   }
 }
